--- a/admin.html
+++ b/admin.html
@@ -7,12 +7,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Firebase App (base) -->
     <script type="module" src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js"></script>
     <!-- Firebase Firestore -->
     <script type="module" src="https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.13.0/firebase-auth.js"></script>
     <script type="module" src="js/admin.js" defer></script>
+    <script type="module" src="js/seña.js" defer></script>
     <style>
       .tab-content {
         display: none;
@@ -36,6 +38,7 @@
         <div class="tabs mb-4">
             <button id="loadTabButton" class="btn btn-primary">Cargar Productos</button>
             <button id="viewTabButton" class="btn btn-secondary">Ver Productos Disponibles</button>
+            <button id="señaTabButton" class="btn btn-secondary">Ver Productos Señados</button>
             <button id="soldTabButton" class="btn btn-success">Ver Productos Vendidos</button>
         </div>
 
@@ -106,9 +109,29 @@
                 </tbody>
             </table>
         </div>
+        <div id="señaTab" class="tab-content">
+            <h2>Productos Señados</h2>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Fecha de Ingreso</th>
+                        <th>Proveedor</th>
+                        <th>Precio de Compra</th>
+                        <th>Precio Venta</th>
+                        <th>Fecha Seña</th>
+                        <th>IMEI</th>
+                        <th>Comprador</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody id="señaList">
+                    <!-- Los productos señalados se añadirán aquí -->
+                </tbody>
+            </table>
+        </div>
     </div>
-
-<!-- Modal para editar producto -->
+        <!-- Modal para editar producto -->
 <div class="modal fade" id="editProductModal" tabindex="-1" aria-labelledby="editProductModalLabel" aria-hidden="true">
   <div class="modal-dialog">
       <div class="modal-content">
@@ -141,7 +164,58 @@
       </div>
   </div>
 </div>
-
+<!-- Modal para señar producto -->
+<div class="modal fade" id="senarProductoModal" tabindex="-1" aria-labelledby="senarProductoModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="senarProductoModalLabel">Señar Producto</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="productIdInput">
+          <div class="mb-3">
+            <label for="customerName" class="form-label">Nombre del Cliente</label>
+            <input type="text" class="form-control" id="customerName" required>
+          </div>
+          <div class="mb-3">
+            <label for="seniaAmount" class="form-label">Monto de la Seña</label>
+            <input type="number" class="form-control" id="seniaAmount" required>
+          </div>
+          <div class="mb-3">
+            <label for="salePrice" class="form-label">Precio de Venta</label>
+            <input type="number" class="form-control" id="salePrice" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" id="confirmSenia">Confirmar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Modal de alerta personalizada -->
+<div class="modal fade" id="customAlertModal" tabindex="-1" role="dialog" aria-labelledby="customAlertLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="customAlertLabel">Atención</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="customAlertMessage">
+          <!-- Aquí se colocará el mensaje del alert -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
 
     <!-- Bootstrap JS and dependencies -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
