--- a/admin.html
+++ b/admin.html
@@ -119,6 +119,7 @@
                         <th>Proveedor</th>
                         <th>Precio de Compra</th>
                         <th>Precio Venta</th>
+                        <th>Monto Seña</th>
                         <th>Fecha Seña</th>
                         <th>IMEI</th>
                         <th>Comprador</th>
