--- a/moderador.html
+++ b/moderador.html
@@ -83,8 +83,9 @@
                     <tr>
                         <th>Nombre</th>
                         <th>Fecha de Ingreso</th>
-                        <th>Precio Venta</th>
                         <th>Fecha Seña</th>
+                        <th>Precio Venta</th>
+                        <th>Monto Seña</th>
                         <th>IMEI</th>
                         <th>Comprador</th>
                         <th>Acciones</th>
