--- a/admin.html
+++ b/admin.html
@@ -81,6 +81,7 @@
                         <th>Precio de Compra</th>
                         <th>IMEI</th>
                         <th>Acciones</th>
+                        <th>Anotaciones</th>
                     </tr>
                 </thead>
                 <tbody id="productList">
@@ -124,6 +125,7 @@
                         <th>IMEI</th>
                         <th>Comprador</th>
                         <th>Acciones</th>
+                        <th>Anotaciones</th>
                     </tr>
                 </thead>
                 <tbody id="señaList">
