--- a/moderador.html
+++ b/moderador.html
@@ -50,6 +50,7 @@
                         <th>Fecha de Ingreso</th>
                         <th>IMEI</th>
                         <th>Acciones</th>
+                        <th>Anotaciones</th>
                     </tr>
                 </thead>
                 <tbody id="availableProductList">
@@ -89,6 +90,7 @@
                         <th>IMEI</th>
                         <th>Comprador</th>
                         <th>Acciones</th>
+                        <th>Anotaciones</th>
                     </tr>
                 </thead>
                 <tbody id="señaList">
