--- a/admin.html
+++ b/admin.html
@@ -35,11 +35,11 @@
 <body>
     <div class="container mt-4">
         <h1 class="mb-4">Panel de Administrador - Productos</h1>
-        <div class="tabs mb-4">
+        <div class="tabs mb-4 d-flex">
             <button id="loadTabButton" class="btn btn-primary">Cargar Productos</button>
-            <button id="viewTabButton" class="btn btn-secondary">Ver Productos Disponibles</button>
-            <button id="señaTabButton" class="btn btn-secondary">Ver Productos Señados</button>
-            <button id="soldTabButton" class="btn btn-success">Ver Productos Vendidos</button>
+            <button id="viewTabButton" class="btn btn-success">Ver Productos Disponibles</button>
+            <button id="señaTabButton" class="btn btn-warning">Ver Productos Señados</button>
+            <button id="soldTabButton" class="btn btn-secondary">Ver Productos Vendidos</button>
         </div>
 
         <div id="loadTab" class="tab-content active">
